--- a/application/index/view/index/index.html
+++ b/application/index/view/index/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -26,73 +27,15 @@
     <link href="/static/app/index/css/city-picker.css" rel="stylesheet" type="text/css" />
     <link href="/static/app/index/css/zzsc.css" rel="stylesheet" type="text/css" />
 
-
-
- <!--yjf-->
-   <!--  <link href="/static/app/index/css/bootstrap.min.css" rel="stylesheet">
-
     <!--yjf-->
     <!-- <link href="/static/app/index/css/bootstrap.min.css" rel="stylesheet">
->>>>>>> origin/zhangsan
     <script src="/static/app/index/js/jquery-1.8.3.min.js"></script>
     <link href="http://cdn.bootcss.com/bootstrap/3.3.6/css/bootstrap.css" rel="stylesheet" type="text/css"/> -->
-
-    <!--yjf-->
-
     <link rel="stylesheet" type="text/css" href="/static/app/index/css/login_common.css">
     <link rel="stylesheet" type="text/css" href="/static/app/index/css/login_login.css">
     <script src="http://www.jq22.com/jquery/jquery-1.10.2.js"></script>
     <script src="/static/app/index/js/gVerify.js"></script>
     <!--end-yjf-->
-
-    <!--日期-->
-    <link href="/static/app/index/css/daterangepicker-bs3.css" rel="stylesheet">
-
-
-<!--yjf-->
- <!-- 会员登录注册 Modal -->
-<!-- Middle modal -->
-<!--<div class="modal fade bs-example-modal-md" tabindex="-1" role="dialog" aria-labelledby="myMiddleModalLabel">-->
-  <!--<div class="modal-dialog modal-md" role="document">-->
-    <!--<div class="modal-content">-->
-<!--&lt;!&ndash;模态框中的内容&ndash;&gt;-->
-<!--<div>-->
-  <!--<div class="login_cont">-->
-    <!--<div class="login_nav">-->
-      <!--<div class="nav_slider">-->
-        <!--<a href="#" class="signup focus">注册</a>-->
-        <!--<a href="#" class="signin">登录</a>-->
-      <!--</div>-->
-    <!--</div>-->
-
-    <!--<form class="form-horizontal" action="{:url('index/Register/doregister')}" method="post" name='myUserform' id='myuserform'>-->
-
-      <!--<div class="input_signup active form-group">-->
-        <!--<input class="input" id="user_name" type="text" aria-label="用户名（包含字母／数字／下划线" placeholder="用户名" name="u_username">-->
-        <!--<div class="hint">请填写符合格式的用户名</div>-->
-        <!--&lt;!&ndash; <input class="input" id="user_email" type="text" aria-label="邮箱" placeholder="邮箱">-->
-        <!--<div class="hint">请填写邮箱</div> &ndash;&gt;-->
-        <!--<input class="input" id="phone" type="text" class="account" aria-label="手机号（仅支持中国大陆）" placeholder="手机号（仅支持中国大陆）" name="u_phone">-->
-        <!--<div class="hint">请填写手机号</div>-->
-
-        <!--<input class="input" id="password" type="password" aria-label="密码" placeholder="密码（不少于 6 位）" name="u_password">-->
-        <!--<div class="hint">请填写符合格式的密码</div>-->
-
-        <!--<input class="input" id="repassword" type="password" aria-label="密码" placeholder="再次输入密码" name="u_repassword">-->
-        <!--<div class="hint">请再次输入密码</div>-->
-
-        <!--<input class="input" id="repassword" type="password" aria-label="密码" placeholder="请输入验证码" name="code">-->
-        <!--<div class="hint">请再次输入密码</div>-->
-
-        <!--<div><img src="{:captcha_src()}" alt="captcha" /></div>-->
-
-        <!--<input type="submit" id="submit" class="button" name="button" value="注册">-->
-        <!--</br>-->
-      <!--</div>-->
-    <!--</form>-->
-
-
-
     <style>
 
         #chat{
@@ -212,28 +155,13 @@
     {css href="/static/app/index/css/reset.css"}
     <!--{!&#45;&#45;三级地址联动&#45;&#45;}-->
     <!--{css href="http://cdn.bootcss.com/bootstrap/3.3.6/css/bootstrap.css" rel="stylesheet" type="text/css"}-->
-<<<<<<< HEAD
-</head>
-
-
-<body>
-
-
-<!--end-yjf-->
-    <!--yjf-->
-<!-- 会员登录注册 Modal -->
-    <!-- Middle modal -->
-<form class="form-horizontal" action="{:url('index/Login/doLogin')}" method="post" name='myUserform' id='myuserform'>
-    <div class="modal fade bs-example-modal-md" tabindex="-1" role="dialog" aria-labelledby="myMiddleModalLabel">
-
     <!--end-yjf-->
-
-
+</head>
+<body>
 <!--yjf-->
  <!-- 会员登录注册 Modal -->
 <!-- Middle modal -->
-<!-- <div class="modal fade bs-example-modal-md" tabindex="-1" role="dialog" aria-labelledby="myMiddleModalLabel">
- -->
+<div class="modal fade bs-example-modal-md" tabindex="-1" role="dialog" aria-labelledby="myMiddleModalLabel">
   <div class="modal-dialog modal-md" role="document">
     <div class="modal-content">
 <!--模态框中的内容-->
@@ -246,79 +174,60 @@
       </div>
     </div>
 
-    <form class="form-horizontal" action="{:url('index/Register/doregister')}" method="post"  onsubmit="return checkuserform() && return checkVer()">
+        <form class="form-horizontal" action="{:url('index/Register/doregister')}" method="post"  onsubmit="return checkuserform() && return checkVer()">
 
-      <div class="input_signup active form-group">
-        <input class="input" id="user_name" type="text" aria-label="用户名（包含字母／数字／下划线" placeholder="用户名" name="u_username" style="border:1px solid #C1C1C1">
-        <div class="hint">请填写符合格式的用户名</div>
-        <!-- <input class="input" id="user_email" type="text" aria-label="邮箱" placeholder="邮箱">
-        <div class="hint">请填写邮箱</div> -->
-        <input class="input" id="phone" type="text" class="account" aria-label="手机号（仅支持中国大陆）" placeholder="手机号（仅支持中国大陆）" name="u_phone" style="border:1px solid #C1C1C1">
-        <div class="hint">请填写手机号</div>
+          <div class="input_signup active form-group">
+            <input class="input" id="user_name" type="text" aria-label="用户名（包含字母／数字／下划线" placeholder="用户名" name="u_username" style="border:1px solid #C1C1C1">
+            <div class="hint">请填写符合格式的用户名</div>
+            <!-- <input class="input" id="user_email" type="text" aria-label="邮箱" placeholder="邮箱">
+            <div class="hint">请填写邮箱</div> -->
+            <input class="input" id="phone" type="text" class="account" aria-label="手机号（仅支持中国大陆）" placeholder="手机号（仅支持中国大陆）" name="u_phone" style="border:1px solid #C1C1C1">
+            <div class="hint">请填写手机号</div>
 
-        <input class="input" id="password" type="password" aria-label="密码" placeholder="密码（不少于 6 位）" name="u_password" style="border:1px solid #C1C1C1">
-        <div class="hint">请填写符合格式的密码</div>
+            <input class="input" id="password" type="password" aria-label="密码" placeholder="密码（不少于 6 位）" name="u_password" style="border:1px solid #C1C1C1">
+            <div class="hint">请填写符合格式的密码</div>
 
-        <input class="input" id="repassword" type="password" aria-label="密码" placeholder="再次输入密码" name="u_repassword" style="border:1px solid #C1C1C1">
-        <div class="hint">请再次输入密码</div>
+            <input class="input" id="repassword" type="password" aria-label="密码" placeholder="再次输入密码" name="u_repassword" style="border:1px solid #C1C1C1">
+            <div class="hint">请再次输入密码</div>
 
 
-        <div style="float:left"><input type="text" id="code_input" class="input" aria-label="密码" placeholder="请输入验证码" name="u_repassword" style="border:1px solid #C1C1C1; width:150px;"></div>
-        <div style="float:left;padding-top:5px;"><a id="v_container" style="padding-left:35px;"></a></div>
-        <div class="hint" id="qql">请输入验证码</div>
-        <!-- <input type="text" id="code_input" value="" placeholder="请输入验证码"/><button id="my_button">验证</button> -->
+            <div style="float:left"><input type="text" id="code_input" class="input" aria-label="密码" placeholder="请输入验证码" name="u_repassword" style="border:1px solid #C1C1C1; width:150px;"></div>
+            <div style="float:left;padding-top:5px;"><a id="v_container" style="padding-left:35px;"></a></div>
+            <div class="hint" id="qql">请输入验证码</div>
+            <!-- <input type="text" id="code_input" value="" placeholder="请输入验证码"/><button id="my_button">验证</button> -->
 
-        <!-- <input class="input" aria-label="密码" placeholder="请输入短信验证码" name="u_repassword" style="border:1px solid #C1C1C1; width:180px"> <a class="input btn btn-success" style="width:145px; height:40px; background-color:green">获取短信验证码</a>
-        <div class="hint">请输入短信验证码</div> -->
+            <!-- <input class="input" aria-label="密码" placeholder="请输入短信验证码" name="u_repassword" style="border:1px solid #C1C1C1; width:180px"> <a class="input btn btn-success" style="width:145px; height:40px; background-color:green">获取短信验证码</a>
+            <div class="hint">请输入短信验证码</div> -->
 
-        <input type="submit" id="submit" class="button yjf" name="button" value="注册">
-        </br>
+            <input type="submit" id="submit" class="button yjf" name="button" value="注册">
+            </br>
+          </div>
+        </form>
+
+        <form class="form-horizontal" action="{:url('index/Login/doLogin')}" method="post" name='myUserform' id='myuserformw' onsubmit="return checkVer()" >
+
+          <div class="input_signin">
+            <input class="input" id="login_user_name" type="text" aria-label="用户名" placeholder="用户名" name="u_username" style="border:1px solid #C1C1C1">
+            <div class="hint" >请输入用户名</div>
+            <input class="input" id="login_password" type="password" aria-label="密码" placeholder="密码" name="u_password" style="border:1px solid #C1C1C1">
+            <div class="hint">请输入密码</div>
+
+           <!--  <div><img src="{:captcha_src()}" alt="captcha" /></div> -->
+            <input type="submit" id="button" class="button yjf" name="button" value="登录">
+            </br>
+          </div>
+        </form>
+
+        </div>
       </div>
-    </form>
-
-    <form class="form-horizontal" action="{:url('index/Login/doLogin')}" method="post" name='myUserform' id='myuserformw' onsubmit="return checkVer()" >
-
-      <div class="input_signin">
-        <input class="input" id="login_user_name" type="text" aria-label="用户名" placeholder="用户名" name="u_username" style="border:1px solid #C1C1C1">
-        <div class="hint" >请输入用户名</div>
-        <input class="input" id="login_password" type="password" aria-label="密码" placeholder="密码" name="u_password" style="border:1px solid #C1C1C1">
-        <div class="hint">请输入密码</div>
-
-       <!--  <div><img src="{:captcha_src()}" alt="captcha" /></div> -->
-        <input type="submit" id="button" class="button yjf" name="button" value="登录">
-        </br>
-      </div>
-    </form>
-
-  </div>
-  <script type="text/javascript" src="/static/app/index/js/login_login.js"></script>
-<<<<<<< HEAD
-  <script type="text/javascript" src="/static/app/index/js/login_form.js"></script>
-
-  <script type="text/javascript" src="/static/app/index/js/login_config.js"></script>
-  <script type="text/javascript" src="/static/app/index/js/login_login_ajax.js"></script>
-</div>
-=======
-  <script type="text/javascript" src="/static/app/index/js/form.js"></script>
-  <script type="text/javascript" src="/static/app/index/js/login_config.js"></script>
-  <script type="text/javascript" src="/static/app/index/js/login_login_ajax.js"></script>
-  </div>
->>>>>>> origin/zhangsan
       <!--模态框中的内容结束-->
     </div>
   </div>
 </div>
-<!--yjf-->
 
 
-</head>
-
-
-
-
-  <!--gt Wrapper Start-->  
   <div class="gt_wrapper">
-    <!--Header Wrap Start-->
+    <!-- Header Wrap Start -->
     <header>
       <div class="gt_top_wrap gt_bg_3 default_width">
           <div class="container">
@@ -1639,9 +1548,13 @@
   <script src="/static/app/index/js/city-picker.data.js"></script>
   <script src="/static/app/index/js/city-picker.js"></script>
   <script src="/static/app/index/js/main.js"></script>
+  <script type="text/javascript" src="/static/app/index/js/login_login.js"></script>
+  <script type="text/javascript" src="/static/app/index/js/form.js"></script>
+  <script type="text/javascript" src="/static/app/index/js/login_config.js"></script>
+  <script type="text/javascript" src="/static/app/index/js/login_login_ajax.js"></script>
   <!--聊天室-->
 
-
+    {block name="myjs"}
   <!--聊天室-->
   <script type="text/javascript" src="/static/app/index/js/socket.io.js"></script>
 
